ingress-ssl/multi-managed-cert-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    networking.gke.io/managed-certificates: managed-cert, multi-managed-cert #ManagedCertificate object name
    kubernetes.io/ingress.class: "gce" #mandatory to use Google-managed SSL
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: helloweb #GKE needs ClusterIp
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
